--- a/WeatherForecast/Presentation/View/Base.lproj/ListViewController.storyboard
+++ b/WeatherForecast/Presentation/View/Base.lproj/ListViewController.storyboard
@@ -20,12 +20,11 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="60"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="2mM-dh-kly"/>
+                                    <constraint firstAttribute="height" constant="60" id="lOB-gk-Zks"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Xhg-7w-TjR">
                                 <rect key="frame" x="0.0" y="104" width="414" height="758"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ListItemCell" rowHeight="168" id="Ebj-SC-hyp" customClass="ListItemCell" customModule="WeatherForecast">
                                         <rect key="frame" x="0.0" y="28" width="414" height="168"/>
@@ -38,49 +37,37 @@
                                                     <rect key="frame" x="8" y="8" width="398" height="152"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="SzT-EW-ykC">
-                                                            <rect key="frame" x="0.0" y="0.0" width="322" height="152"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="348" height="152"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KOT-wi-2Pp">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="322" height="30.5"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="JpZ-1e-TYD"/>
-                                                                    </constraints>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KOT-wi-2Pp">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="348" height="30.5"/>
+                                                                    <accessibility key="accessibilityConfiguration">
+                                                                        <accessibilityTraits key="traits" staticText="YES" adjustable="YES"/>
+                                                                    </accessibility>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ade-I8-G5P">
-                                                                    <rect key="frame" x="0.0" y="30.5" width="322" height="30.5"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="nix-4L-k1R"/>
-                                                                    </constraints>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Average" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ade-I8-G5P">
+                                                                    <rect key="frame" x="0.0" y="30.5" width="348" height="30.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Yd-3N-ZLW">
-                                                                    <rect key="frame" x="0.0" y="61" width="322" height="30"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="Vjg-hj-AvN"/>
-                                                                    </constraints>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pressure" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Yd-3N-ZLW">
+                                                                    <rect key="frame" x="0.0" y="61" width="348" height="30"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q6q-dm-lws">
-                                                                    <rect key="frame" x="0.0" y="91" width="322" height="30.5"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="qVe-NM-0J1"/>
-                                                                    </constraints>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Humidity" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q6q-dm-lws">
+                                                                    <rect key="frame" x="0.0" y="91" width="348" height="30.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tj6-oO-OSv">
-                                                                    <rect key="frame" x="0.0" y="121.5" width="322" height="30.5"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="txK-EQ-9s4"/>
-                                                                    </constraints>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tj6-oO-OSv">
+                                                                    <rect key="frame" x="0.0" y="121.5" width="348" height="30.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -88,14 +75,19 @@
                                                             </subviews>
                                                         </stackView>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YCZ-wT-vtm">
-                                                            <rect key="frame" x="322" y="38" width="76" height="76"/>
+                                                            <rect key="frame" x="348" y="51" width="50" height="50"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" secondItem="YCZ-wT-vtm" secondAttribute="height" multiplier="1:1" id="f1k-q1-LKE"/>
+                                                                <constraint firstAttribute="width" secondItem="YCZ-wT-vtm" secondAttribute="height" multiplier="1:1" id="G7g-Uk-cuf"/>
+                                                                <constraint firstAttribute="height" relation="lessThanOrEqual" constant="50" id="mgu-go-xOO"/>
                                                             </constraints>
                                                         </imageView>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstItem="YCZ-wT-vtm" firstAttribute="height" secondItem="wcA-Dj-BKR" secondAttribute="height" multiplier="0.5" id="20t-f4-37r"/>
+                                                        <constraint firstItem="SzT-EW-ykC" firstAttribute="top" secondItem="wcA-Dj-BKR" secondAttribute="top" id="1vI-8k-AX3"/>
+                                                        <constraint firstAttribute="bottom" secondItem="SzT-EW-ykC" secondAttribute="bottom" id="8iL-Jm-VaO"/>
+                                                        <constraint firstItem="YCZ-wT-vtm" firstAttribute="leading" secondItem="SzT-EW-ykC" secondAttribute="trailing" id="Mgi-6b-kUy"/>
+                                                        <constraint firstItem="SzT-EW-ykC" firstAttribute="leading" secondItem="wcA-Dj-BKR" secondAttribute="leading" id="eZB-eV-Srg"/>
+                                                        <constraint firstItem="YCZ-wT-vtm" firstAttribute="leading" secondItem="SzT-EW-ykC" secondAttribute="trailing" id="yRU-VI-DFJ"/>
                                                     </constraints>
                                                 </stackView>
                                             </subviews>
